gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-web
  namespace: platform-demo
spec:
  parentRefs:
    - name: demo-gateway
      sectionName: http
  rules:
    - matches:
        - path: {type: PathPrefix, value: /split}
      filters:
        - type: URLRewrite
          urlRewrite:
            path: {type: ReplacePrefixMatch, replacePrefixMatch: /}
      backendRefs:
        - {name: demo-web, port: 80, weight: 80}
        - {name: demo-web-canary, port: 80, weight: 20}
    - matches:
        - path: {type: PathPrefix, value: /canary}
      filters:
        - type: URLRewrite
          urlRewrite:
            path: {type: ReplacePrefixMatch, replacePrefixMatch: /}
      backendRefs:
        - {name: demo-web-canary, port: 80}
    - matches:
        - path: {type: PathPrefix, value: /}
          headers:
            - {name: X-Canary, value: "true"}
      backendRefs:
        - {name: demo-web-canary, port: 80}
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - {name: demo-web, port: 80}
